--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.10.4
 beautifulsoup4==4.3.2
+Flask==0.10.1
 folium==0.1.4
 geopy==1.10.0
-gunicorn==19.3.0
-heroku==0.1.4
 itsdangerous==0.24
-python-dateutil==1.5
+Jinja2==2.7.3
+MarkupSafe==0.23
 requests==2.7.0
+Werkzeug==0.10.4
+wheel==0.24.0
