--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-beautifulsoup4==4.3.2
+beautifulsoup4==4.4.1
 Flask==0.10.1
-folium==0.1.4
+folium==0.2.0
+freestuffs==0.1
 geopy==1.10.0
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2==2.8
 MarkupSafe==0.23
 requests==2.7.0
+Unidecode==0.4.18
 Werkzeug==0.10.4
-wheel==0.24.0
